finalized realm and backend

--- a/SmartList/View/Base.lproj/Main.storyboard
+++ b/SmartList/View/Base.lproj/Main.storyboard
@@ -34,12 +34,62 @@
                     <navigationItem key="navigationItem" title="Categories" id="BYg-RV-YeY">
                         <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="RWC-r5-rwu">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonClicked:" destination="a3b-Tj-dvh" id="woc-i1-QTk"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="d8f-Sj-9Sa" kind="show" identifier="showItems" id="9aE-iF-lQF"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wAK-Ih-1Ea" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="760.86956521739137" y="85.714285714285708"/>
+        </scene>
+        <!--Item View Controller-->
+        <scene sceneID="iq7-hR-ZRv">
+            <objects>
+                <tableViewController storyboardIdentifier="ItemViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="d8f-Sj-9Sa" customClass="ItemViewController" customModule="SmartList" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="zVX-bp-aCw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="PwH-gq-cfn">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="d8f-Sj-9Sa" id="duf-7z-tav"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="itemCell" id="ldy-bm-nKw">
+                                <rect key="frame" x="0.0" y="72" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ldy-bm-nKw" id="0OX-ga-eny">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="d8f-Sj-9Sa" id="dVk-vG-UhK"/>
+                            <outlet property="delegate" destination="d8f-Sj-9Sa" id="0tl-dE-RNM"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="13X-Im-38y">
+                        <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="hu5-Ni-rj0">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addNewItem:" destination="d8f-Sj-9Sa" id="jfe-1B-3Bs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qgk-A8-MhE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1548" y="86"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="AN5-y6-xjm">
